refactor lobby, match, round, move hierarchy
note: move is still equivalent to round

also rename lobby fields with current state
to start with the word "current"
