# api/src/tsoa/swagger.json
@@ -41,17 +41,13 @@
 					"open"
 				]
 			},
-			"LobbyState": {
+			"Pick_IGetLobbyByIdResult.Exclude_keyofIGetLobbyByIdResult.ActiveLobbyRequirements__": {
 				"properties": {
 					"created_at": {
 						"type": "string",
 						"format": "date-time"
 					},
 					"creation_block_height": {
-						"type": "number",
-						"format": "double"
-					},
-					"current_round": {
 						"type": "number",
 						"format": "double"
 					},
@@ -89,11 +85,56 @@
 					"round_length": {
 						"type": "number",
 						"format": "double"
-					},
-					"turn": {
+					}
+				},
+				"required": [
+					"created_at",
+					"creation_block_height",
+					"hidden",
+					"initial_random_seed",
+					"lobby_creator",
+					"lobby_id",
+					"lobby_state",
+					"max_players",
+					"num_of_rounds",
+					"play_time_per_player",
+					"practice",
+					"round_length"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_IGetLobbyByIdResult.ActiveLobbyRequirements_": {
+				"$ref": "#/components/schemas/Pick_IGetLobbyByIdResult.Exclude_keyofIGetLobbyByIdResult.ActiveLobbyRequirements__",
+				"description": "Construct a type with the properties of T except for those in type K."
+			},
+			"PropertiesNonNullable_Pick_IGetLobbyByIdResult.ActiveLobbyRequirements__": {
+				"properties": {
+					"current_match": {
 						"type": "number",
-						"format": "double"
+						"format": "double",
+						"nullable": true
 					},
+					"current_round": {
+						"type": "number",
+						"format": "double",
+						"nullable": true
+					},
+					"current_turn": {
+						"type": "number",
+						"format": "double",
+						"nullable": true
+					}
+				},
+				"required": [
+					"current_match",
+					"current_round",
+					"current_turn"
+				],
+				"type": "object"
+			},
+			"LobbyState": {
+				"properties": {
 					"round_seed": {
 						"type": "string"
 					},
@@ -105,20 +146,6 @@
 					}
 				},
 				"required": [
-					"created_at",
-					"creation_block_height",
-					"current_round",
-					"hidden",
-					"initial_random_seed",
-					"lobby_creator",
-					"lobby_id",
-					"lobby_state",
-					"max_players",
-					"num_of_rounds",
-					"play_time_per_player",
-					"practice",
-					"round_length",
-					"turn",
 					"round_seed",
 					"players"
 				],
@@ -153,9 +180,20 @@
 						"type": "number",
 						"format": "double"
 					},
+					"current_match": {
+						"type": "number",
+						"format": "double",
+						"nullable": true
+					},
 					"current_round": {
 						"type": "number",
-						"format": "double"
+						"format": "double",
+						"nullable": true
+					},
+					"current_turn": {
+						"type": "number",
+						"format": "double",
+						"nullable": true
 					},
 					"hidden": {
 						"type": "boolean"
@@ -191,16 +229,14 @@
 					"round_length": {
 						"type": "number",
 						"format": "double"
-					},
-					"turn": {
-						"type": "number",
-						"format": "double"
 					}
 				},
 				"required": [
 					"created_at",
 					"creation_block_height",
+					"current_match",
 					"current_round",
+					"current_turn",
 					"hidden",
 					"initial_random_seed",
 					"lobby_creator",
@@ -210,8 +246,7 @@
 					"num_of_rounds",
 					"play_time_per_player",
 					"practice",
-					"round_length",
-					"turn"
+					"round_length"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -242,9 +277,20 @@
 						"type": "number",
 						"format": "double"
 					},
+					"current_match": {
+						"type": "number",
+						"format": "double",
+						"nullable": true
+					},
 					"current_round": {
 						"type": "number",
-						"format": "double"
+						"format": "double",
+						"nullable": true
+					},
+					"current_turn": {
+						"type": "number",
+						"format": "double",
+						"nullable": true
 					},
 					"hidden": {
 						"type": "boolean"
@@ -280,16 +326,14 @@
 					"round_length": {
 						"type": "number",
 						"format": "double"
-					},
-					"turn": {
-						"type": "number",
-						"format": "double"
 					}
 				},
 				"required": [
 					"created_at",
 					"creation_block_height",
+					"current_match",
 					"current_round",
+					"current_turn",
 					"hidden",
 					"initial_random_seed",
 					"lobby_creator",
@@ -299,8 +343,7 @@
 					"num_of_rounds",
 					"play_time_per_player",
 					"practice",
-					"round_length",
-					"turn"
+					"round_length"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -333,9 +376,20 @@
 						"type": "number",
 						"format": "double"
 					},
+					"current_match": {
+						"type": "number",
+						"format": "double",
+						"nullable": true
+					},
 					"current_round": {
 						"type": "number",
-						"format": "double"
+						"format": "double",
+						"nullable": true
+					},
+					"current_turn": {
+						"type": "number",
+						"format": "double",
+						"nullable": true
 					},
 					"hidden": {
 						"type": "boolean"
@@ -371,16 +425,14 @@
 					"round_length": {
 						"type": "number",
 						"format": "double"
-					},
-					"turn": {
-						"type": "number",
-						"format": "double"
 					}
 				},
 				"required": [
 					"created_at",
 					"creation_block_height",
+					"current_match",
 					"current_round",
+					"current_turn",
 					"hidden",
 					"initial_random_seed",
 					"lobby_creator",
@@ -390,8 +442,7 @@
 					"num_of_rounds",
 					"play_time_per_player",
 					"practice",
-					"round_length",
-					"turn"
+					"round_length"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -407,9 +458,20 @@
 						"type": "number",
 						"format": "double"
 					},
+					"current_match": {
+						"type": "number",
+						"format": "double",
+						"nullable": true
+					},
 					"current_round": {
 						"type": "number",
-						"format": "double"
+						"format": "double",
+						"nullable": true
+					},
+					"current_turn": {
+						"type": "number",
+						"format": "double",
+						"nullable": true
 					},
 					"hidden": {
 						"type": "boolean"
@@ -445,16 +507,14 @@
 					"round_length": {
 						"type": "number",
 						"format": "double"
-					},
-					"turn": {
-						"type": "number",
-						"format": "double"
 					}
 				},
 				"required": [
 					"created_at",
 					"creation_block_height",
+					"current_match",
 					"current_round",
+					"current_turn",
 					"hidden",
 					"initial_random_seed",
 					"lobby_creator",
@@ -464,8 +524,7 @@
 					"num_of_rounds",
 					"play_time_per_player",
 					"practice",
-					"round_length",
-					"turn"
+					"round_length"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -560,6 +619,15 @@
 						"required": true,
 						"schema": {
 							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "matchWithinLobby",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
 						}
 					}
 				]
@@ -690,7 +758,16 @@
 					},
 					{
 						"in": "query",
-						"name": "round",
+						"name": "matchWithinLobby",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					},
+					{
+						"in": "query",
+						"name": "roundWithinMatch",
 						"required": true,
 						"schema": {
 							"format": "double",
@@ -727,7 +804,16 @@
 					},
 					{
 						"in": "query",
-						"name": "round",
+						"name": "matchWithinLobby",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					},
+					{
+						"in": "query",
+						"name": "roundWithinMatch",
 						"required": true,
 						"schema": {
 							"format": "double",
